<resources>
    <string name="app_name">CupsliceNew</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">348846111886362</string>

    <string name="base_string_app_project_name">Cupslice Photo Editor</string>
    <string name="base_string_app_project_copyright">Copyright &#169; 2016</string>
    <string name="base_string_app_project_copyright_desc">Cupslice Photo Editor Indonesia</string>
    <string name="base_string_app_project_copyright_default">All right reserved</string>
    <string name="base_string_cancel">Cancel</string>
    <string name="base_string_apply">Apply</string>
    <string name="base_string_yes">Yes</string>
    <string name="base_string_ok">Ok</string>
    <string name="base_string_activity_notfound">have not yet installed. Please install the latest version.</string>
    <string name="base_string_null_json">Something wrong with your network or your network is slow</string>
    <string name="base_string_no_internet">You have no Internet Connection</string>
    <string name="pagetitle_album">Album</string>
    <string name="pagetitle_about">About</string>
    <string name="pagetitle_htu">How To Use</string>
    <string name="pagetitle_recommended">Recommended Apps</string>
    <string name="pagetitle_settings">Settings</string>
    <string name="pagetitle_camera">Camera</string>
    <string name="pagetitle_store">Cupslice Cafe</string>
    <string name="pagetitle_social_list">Follow Us</string>

    <string name="message_exit">Are you sure want to exit application?</string>
    <string name="message_rate">Yoiur 5 stars rate are what keep us growing</string>


    <string name="camera_no_feature">Your device has no Camera</string>
    <string name="camera_no_flashlight">Your Camera has no flash light</string>
    <string name="camera_flashlight_on">Your flash camera has turn on</string>
    <string name="camera_flashlight_off">Your flash camera has turn off</string>
    <string name="camera_error">You have some problem with your camera, Please restart the app</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="store_header_categories">Categories</string>
    <string name="store_header_newstickers">New Stickers</string>
    <string name="store_header_popular">Popular</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_editor">ActivityEditor</string>

</resources>
