<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border_bottom_pink">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/app_name"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/icon_close_pink"
            android:id="@+id/about_imagebutton_back"/>

        <com.cupslicenew.view.ViewText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:text="@string/pagetitle_about"
            android:textColor="@color/base_black"
            android:textSize="18sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/about_container_center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/about_imageview_logo"
                android:layout_width="150dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:src="@drawable/logo_app" />

            <com.cupslicenew.view.ViewText
                android:id="@+id/about_textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/about_imageview_logo"
                android:layout_centerHorizontal="true"
                android:text="@string/base_string_app_project_name"
                android:textColor="@color/base_gray"
                android:textSize="18sp" />

            <com.cupslicenew.view.ViewText
                android:id="@+id/about_textview_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/about_textview_name"
                android:layout_centerHorizontal="true"
                android:text="@string/base_string_app_project_name"
                android:textColor="@color/base_gray"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/about_container_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp">

            <com.cupslicenew.view.ViewText
                android:id="@+id/about_textview_copy_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/base_string_app_project_copyright"
                android:textColor="@color/base_gray"
                android:textSize="13sp" />

            <com.cupslicenew.view.ViewText
                android:id="@+id/about_textview_copy_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_textview_copy_top"
                android:layout_centerHorizontal="true"
                android:text="@string/base_string_app_project_copyright_desc"
                android:textColor="@color/base_gray"
                android:textSize="13sp" />

            <com.cupslicenew.view.ViewText
                android:id="@+id/about_textview_copy_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_textview_copy_middle"
                android:layout_centerHorizontal="true"
                android:text="@string/base_string_app_project_copyright_default"
                android:textColor="@color/base_gray"
                android:textSize="13sp" />
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>